--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>My Landing Page</h1>
     <a href="/contact.html"></a>
     <a href="/projects.html"></a>
     <a href="/about.html"></a>
