--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Contact Page</h1>
+    <a href="/index.html">Landing</a>
+    <a href="/projects.html">Projects</a>
+    <a href="/about.html">About</a>
 </body>
 </html>
