--- a/projects.html
+++ b/projects.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Projects Page</h1>
+    <a href="/index.html">Landing</a>
+    <a href="/contact">Contact</a>
+    <a href="/about.html">About</a>
 </body>
 </html>
