--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="/contact.html">Contact</a>
     <a href="/projects.html">Projects</a>
     <a href="/about.html">About</a>
-    <img src="ME.jpg">
+    <img src="https://photos.google.com/search/_cAF1QipN38LxgovgO03eDQjMnb2XmIqzq5hpfNMk_Alma%20Hidalgo/photo/AF1QipOmhxOrcRlZ5dFsodZVirBJ1t1ASfMMEwlAI9Q-">
     <h2>My Bio:</h2>
     <p>My name is Alma, I have never worked with software development until 6 months ago when I started a coding for women boot camp. I have learned how to use JavaScript, HTML and CSS. Web development is very detail oriented, there are a lot of factors that go in to creating a functioning and safe website. </p>
 </body>
