--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <a href="/contact.html">Contact</a>
     <a href="/projects.html">Projects</a>
     <a href="/about.html">About</a>
-    <img src="https://photos.fife.usercontent.google.com/pw/AP1GczNAOAEV-yQHoCTfYKAHfoDQy660B4LA0rSVEuR67T1w3Tl1raXSgSCwMw=w610-h869-s-no-gm?authuser=0">
+    <img src="img/ME.jpg">
     <h2>My Bio:</h2>
     <p>My name is Alma, I have never worked with software development until 6 months ago when I started a coding for women boot camp. I have learned how to use JavaScript, HTML and CSS. Web development is very detail oriented, there are a lot of factors that go in to creating a functioning and safe website. </p>
 </body>
